feat(swagger,clients,pokedex,pokemon) : changement code retour des erreurs 404 non valide à 409
