# src/routes/pokemon.routes.ts
@@ -30,7 +30,7 @@ PokemonRouter.get('/', Cache, async (req: Request, res: Response) => {
 		);
 
 		if (pokemonExist) {
-			return res.status(404).send('Pokemon already exist');
+			return res.status(409).send('Pokemon already exist');
 		}
 
 		//Création 1 par 1 de pokémon à partir du tableau créé
